fix spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,12 @@
-.bottom-padding{
+.bottom-padding-big{
   padding-bottom: 50px;
+}
+
+.bottom-padding-small{
+  padding-bottom: 30px;
+}
+
+.right {
+    position: absolute;
+    right: 0px;
 }
